--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,10 +13,14 @@ website:
             href: Hands-on_Exercise/Hands-on_Ex1/chap02/Hands-on_Ex1_b.qmd
           - text: Hands-on Exercise 2 chap04
             href: Hands-on_Exercise/Hands-on_Ex2/chap04/Hands-on_Ex2.qmd
+          - text: Hands-on Exercise 3 chap05
+            href: Hands-on_Exercise/Hands-on_Ex3/chap05/Hands-on_Ex3.qmd
       - text: In-Class_Exercise
         menu: 
           - text: In-Class Exercise 1 chap03
             href: In-Class_Exercise/In-class_Ex01/In-class_Ex01.qmd
+          - text: In-Class Exercise 2 chap05
+            href: In-Class_Exercise/In-class_Ex02/In-class_Ex02.qmd
       - text: Take-home_Exercise
         menu: 
           - text: Take-home Exercise 1
