--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,9 @@ website:
         menu: 
           - text: Take-home Exercise 1
             href: Take-home Exercise/Take-home_Ex1/Take-home_Ex1.qmd
+        menu: 
+          - text: Take-home Exercise 2
+            href: Take-home Exercise/Take-home_Ex2/Take-home_Ex2.qmd
     right: 
        - href: index.qmd
          text: Home
